# DB2Projekt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  gitlab-ci.yml  main.cpp
core/: base_column.hpp  column.hpp  column_base_typed.hpp  compressed_column.hpp  global_definitions.hpp
data/: float column  int column  string column
doc/: Doxyfile.in  documentation.hpp  doxygen.conf  warnings.txt
include/: unittest.hpp  utils.hpp
include/compression/: compressed_column.hpp  delta_compressed_column.hpp  dictionary_compressed_column.hpp  run_length_compressed_column.hpp
include/core/: IColumn.hpp  base_column.hpp  column.hpp  column_base.hpp  column_base_typed.hpp  compressed_column.hpp  global_definitions.hpp  lookup_array.hpp
include/core/impl/: column.tpp  column_base.tpp
src/: CMakeLists.txt  base_column.cpp  main.cpp
src/core/: base_column.cpp
src/tests/: utils.hpp
